--- a/index.html
+++ b/index.html
@@ -3,33 +3,154 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CubaChat Pro - Live</title>
+    <title>NEON CHAT - FUTURISTIC</title>
     <style>
-        /* Estilos optimizados para evitar saltos de línea */
-        body { font-family: 'Segoe UI', Tahoma, sans-serif; margin: 0; background: #e5ddd5; display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
-        #cabecera { background: #075e54; color: white; padding: 15px; text-align: center; font-weight: bold; box-shadow: 0 2px 5px rgba(0,0,0,0.2); z-index: 10; }
-        #mensajes { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; background-image: url('https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png'); background-repeat: repeat; }
-        .msg { padding: 10px; border-radius: 10px; max-width: 80%; box-shadow: 0 1px 1px rgba(0,0,0,0.1); font-size: 15px; line-height: 1.4; word-wrap: break-word; }
-        .msg b { display: block; font-size: 12px; margin-bottom: 3px; color: #075e54; }
-        .enviado { background: #dcf8c6; align-self: flex-end; border-top-right-radius: 0; }
-        .recibido { background: white; align-self: flex-start; border-top-left-radius: 0; }
-        #controles { background: #f0f0f0; padding: 10px; display: flex; gap: 8px; border-top: 1px solid #ddd; }
-        input { flex: 1; padding: 12px; border-radius: 25px; border: 1px solid #ccc; outline: none; font-size: 15px; }
-        button { background: #075e54; color: white; border: none; width: 45px; height: 45px; border-radius: 50%; cursor: pointer; font-size: 20px; display: flex; align-items: center; justify-content: center; flex-shrink: 0; }
-        #status { font-size: 10px; color: red; text-align: center; background: #ffebeb; }
+        :root {
+            --bg-color: #050505;
+            --panel-bg: rgba(10, 10, 10, 0.9);
+            --neon-border: #00f3ff;
+        }
+
+        body {
+            background-color: var(--bg-color);
+            background-image: 
+                radial-gradient(circle at 50% 50%, #1a1a1a 0%, #050505 100%),
+                linear-gradient(rgba(0, 243, 255, 0.05) 1px, transparent 1px),
+                linear-gradient(90deg, rgba(0, 243, 255, 0.05) 1px, transparent 1px);
+            background-size: 100% 100%, 30px 30px, 30px 30px;
+            color: #fff;
+            font-family: 'Orbitron', sans-serif; /* Si no carga, usa sans-serif */
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+            overflow: hidden;
+        }
+
+        /* Cabecera Futurista */
+        #header {
+            background: var(--panel-bg);
+            padding: 15px 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 2px solid var(--neon-border);
+            box-shadow: 0 0 15px var(--neon-border);
+        }
+
+        #header h1 { margin: 0; font-size: 1.2rem; letter-spacing: 3px; text-shadow: 0 0 10px var(--neon-border); }
+
+        /* Botón Vaciar */
+        #btnVaciar {
+            background: transparent;
+            color: #ff0055;
+            border: 1px solid #ff0055;
+            padding: 5px 10px;
+            cursor: pointer;
+            font-family: inherit;
+            font-size: 0.8rem;
+            text-transform: uppercase;
+            transition: 0.3s;
+        }
+        #btnVaciar:hover { background: #ff0055; color: white; box-shadow: 0 0 20px #ff0055; }
+
+        /* Área de Mensajes */
+        #chat-container {
+            flex: 1;
+            overflow-y: auto;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        .bubble {
+            padding: 12px 18px;
+            border-radius: 15px;
+            max-width: 75%;
+            position: relative;
+            border: 1px solid;
+            background: rgba(0, 0, 0, 0.6);
+            backdrop-filter: blur(5px);
+            animation: fadeIn 0.3s ease;
+        }
+
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+
+        .bubble b { display: block; font-size: 0.8rem; margin-bottom: 5px; text-transform: uppercase; }
+
+        /* Controles */
+        #controls {
+            background: var(--panel-bg);
+            padding: 20px;
+            display: flex;
+            gap: 10px;
+            border-top: 1px solid var(--neon-border);
+        }
+
+        input {
+            flex: 1;
+            background: #000;
+            border: 1px solid var(--neon-border);
+            color: var(--neon-border);
+            padding: 12px;
+            outline: none;
+            box-shadow: inset 0 0 5px var(--neon-border);
+        }
+
+        button#send {
+            background: var(--neon-border);
+            color: #000;
+            border: none;
+            padding: 0 25px;
+            font-weight: bold;
+            cursor: pointer;
+            text-transform: uppercase;
+        }
+
+        /* Overlay de Login */
+        #login-overlay {
+            position: fixed;
+            top:0; left:0; width: 100%; height:100%;
+            background: #000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 100;
+        }
+
+        .login-box {
+            text-align: center;
+            padding: 40px;
+            border: 2px solid var(--neon-border);
+            box-shadow: 0 0 30px var(--neon-border);
+        }
     </style>
 </head>
 <body>
-    <div id="cabecera">CubaChat - <span id="miNombre">...</span></div>
-    <div id="status"></div>
-    <div id="mensajes"></div>
-    <div id="controles">
-        <input type="text" id="mensajeInput" placeholder="Escribe un mensaje..." autocomplete="off">
-        <button id="btnEnviar">➤</button>
+
+    <div id="login-overlay">
+        <div class="login-box">
+            <h2>ACCESO AL SISTEMA</h2>
+            <input type="text" id="username" placeholder="IDENTIFICADOR...">
+            <br><br>
+            <button id="enter-btn" style="padding: 10px 20px; background: var(--neon-border); border:none; cursor:pointer;">INGRESAR</button>
+        </div>
+    </div>
+
+    <div id="header">
+        <h1 id="title">NODE_CHAT // <span id="display-name"></span></h1>
+        <button id="btnVaciar">Vaciar Buffer</button>
+    </div>
+
+    <div id="chat-container"></div>
+
+    <div id="controls">
+        <input type="text" id="msg-input" placeholder="Transmitiendo datos..." autocomplete="off">
+        <button id="send">ENVIAR</button>
     </div>
 
     <script type="module">
-        // Importaciones estándar de Firebase
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
         import { getFirestore, collection, addDoc, query, orderBy, onSnapshot, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
@@ -44,71 +165,44 @@
 
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
-        const statusDiv = document.getElementById("status");
 
-        // SESIÓN: Forzamos el uso de sessionStorage para cumplir tu petición de reinicio al cerrar pestaña
-        let usuario = sessionStorage.getItem("cuba_session_v1");
-        if(!usuario) {
-            usuario = prompt("Introduce tu nombre:");
-            if(!usuario || usuario.trim() === "") usuario = "Anon" + Math.floor(Math.random() * 100);
-            sessionStorage.setItem("cuba_session_v1", usuario);
+        const neonColors = ['#00f3ff', '#ff00ff', '#00ff00', '#ffff00', '#ff0055', '#7000ff'];
+        let myColor = neonColors[Math.floor(Math.random() * neonColors.length)];
+        let usuario = sessionStorage.getItem("neon_user");
+
+        // Lógica Login
+        if (usuario) {
+            document.getElementById('login-overlay').style.display = 'none';
+            document.getElementById('display-name').innerText = usuario;
         }
-        document.getElementById("miNombre").innerText = usuario;
 
-        // Función de color para otros usuarios
-        const getColor = (name) => {
-            let hash = 0;
-            for (let i = 0; i < name.length; i++) hash = name.charCodeAt(i) + ((hash << 5) - hash);
-            return `hsl(${Math.abs(hash) % 360}, 60%, 88%)`;
-        };
-
-        const input = document.getElementById("mensajeInput");
-        const btn = document.getElementById("btnEnviar");
-
-        // LÓGICA DE ENVÍO: Se ha simplificado para evitar errores de ejecución en GitHub
-        const enviarMensaje = async () => {
-            const texto = input.value.trim();
-            if (texto !== "") {
-                input.value = ""; // Limpiamos rápido para dar sensación de velocidad
-                try {
-                    await addDoc(collection(db, "mensajes"), {
-                        autor: usuario,
-                        texto: texto,
-                        timestamp: serverTimestamp()
-                    });
-                } catch (e) {
-                    statusDiv.innerText = "Error al enviar: " + e.message;
-                }
+        document.getElementById('enter-btn').onclick = () => {
+            const val = document.getElementById('username').value.trim();
+            if (val) {
+                sessionStorage.setItem("neon_user", val);
+                sessionStorage.setItem("neon_color", myColor);
+                location.reload();
             }
         };
 
-        btn.onclick = enviarMensaje;
-        input.onkeypress = (e) => { if(e.key === 'Enter') enviarMensaje(); };
+        const userColor = sessionStorage.getItem("neon_color") || myColor;
+        const userActual = sessionStorage.getItem("neon_user");
 
-        // LÓGICA DE LECTURA: Actualización en tiempo real
-        const q = query(collection(db, "mensajes"), orderBy("timestamp"));
-        onSnapshot(q, (snapshot) => {
-            const contenedor = document.getElementById("mensajes");
-            contenedor.innerHTML = "";
-            snapshot.forEach((doc) => {
-                const d = doc.data();
-                if (d.texto) {
-                    const esMio = d.autor === usuario;
-                    const div = document.createElement("div");
-                    div.className = "msg " + (esMio ? "enviado" : "recibido");
-                    
-                    if (!esMio) {
-                        div.style.backgroundColor = getColor(d.autor);
-                    }
+        // Enviar
+        const enviar = async () => {
+            const input = document.getElementById('msg-input');
+            if (input.value.trim()) {
+                const text = input.value;
+                input.value = "";
+                await addDoc(collection(db, "mensajes"), {
+                    autor: userActual,
+                    texto: text,
+                    color: userColor,
+                    timestamp: serverTimestamp()
+                });
+            }
+        };
 
-                    div.innerHTML = `<b>${d.autor}</b>${d.texto}`;
-                    contenedor.appendChild(div);
-                }
-            });
-            contenedor.scrollTop = contenedor.scrollHeight;
-        }, (error) => {
-            statusDiv.innerText = "Error de red: " + error.message;
-        });
-    </script>
-</body>
-</html>
+        document.getElementById('send').onclick = enviar;
+        document.getElementById('msg-input').onkeypress = (e) => { if(e.key === 'Enter') enviar(); };
+        document
