--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEON CHAT - TERMINAL</title>
+    <title>EL SOLAR</title>
     <style>
         :root {
             --bg-color: #020202;
-            --panel-bg: rgba(5, 5, 5, 0.98);
             --neon-border: #00f3ff;
-            --neon-text: #00f3ff;
             --danger: #ff0055;
         }
 
@@ -21,7 +19,7 @@
                 linear-gradient(90deg, rgba(0, 243, 255, 0.03) 1px, transparent 1px);
             background-size: 100% 100%, 40px 40px, 40px 40px;
             color: #fff;
-            font-family: 'Segoe UI', sans-serif;
+            font-family: 'Segoe UI', Tahoma, sans-serif;
             margin: 0;
             display: flex;
             flex-direction: column;
@@ -29,44 +27,67 @@
             overflow: hidden;
         }
 
-        /* Cabecera */
+        /* Cabecera con el nuevo título */
         #header {
-            background: var(--panel-bg);
-            padding: 10px 20px;
+            padding: 15px 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            border-bottom: 1px solid var(--neon-border);
-            box-shadow: 0 0 15px rgba(0, 243, 255, 0.3);
+            border-bottom: 2px solid var(--neon-border);
+            background: rgba(0,0,0,0.9);
+            box-shadow: 0 0 15px var(--neon-border);
             z-index: 100;
         }
 
-        #header h1 { margin: 0; font-size: 0.9rem; letter-spacing: 4px; color: var(--neon-text); text-transform: uppercase; }
+        #header h1 { 
+            margin: 0; 
+            font-size: 1.5rem; 
+            letter-spacing: 5px; 
+            color: var(--neon-border); 
+            text-shadow: 0 0 10px var(--neon-border);
+        }
 
         #btnVaciar {
             background: transparent;
             color: var(--danger);
             border: 1px solid var(--danger);
-            padding: 4px 10px;
+            padding: 6px 15px;
             cursor: pointer;
-            font-size: 0.7rem;
             font-weight: bold;
+            text-transform: uppercase;
+            font-size: 0.7rem;
             transition: 0.3s;
         }
         #btnVaciar:hover { background: var(--danger); color: white; box-shadow: 0 0 15px var(--danger); }
 
-        /* Chat */
-        #chat-container { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 10px; }
+        /* Contenedor de mensajes */
+        #chat-container { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 12px; }
 
         .bubble {
-            padding: 10px 15px;
-            border-radius: 4px;
-            max-width: 85%;
+            padding: 12px 18px;
+            border-radius: 8px;
+            max-width: 80%;
             background: rgba(0, 0, 0, 0.8);
-            border-left: 3px solid;
+            border-left: 4px solid;
+            backdrop-filter: blur(5px);
             box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
         }
 
-        .bubble b { display: block; font-size: 0.7rem; margin-bottom: 2px; letter-spacing: 1px; }
+        .bubble b { display: block; font-size: 0.8rem; margin-bottom: 4px; letter-spacing: 1px; }
 
-        /* Controles a Pant
+        /* --- CAMBIO: INPUT A TODO LO LARGO --- */
+        #controls {
+            display: flex;
+            flex-direction: column; 
+            background: #000;
+            border-top: 2px solid var(--neon-border);
+        }
+
+        #msg-input {
+            width: 100%; 
+            background: #050505;
+            border: none;
+            color: #fff;
+            padding: 25px; 
+            font-size: 1.1rem;
+            outline:
