--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             overflow: hidden;
         }
 
-        /* AVISO CENTRAL */
+        /* AVISO CENTRAL DE BIENVENIDA */
         #aviso-central {
             position: fixed;
             top: 50%;
@@ -40,6 +40,7 @@
             display: none;
             box-shadow: 0 0 30px var(--solar-yellow);
             pointer-events: none;
+            text-transform: uppercase;
         }
 
         /* LOGIN OVERLAY */
@@ -61,7 +62,7 @@
             box-shadow: 0 0 30px var(--neon-border); 
         }
 
-        /* HEADER Y CHAT */
+        /* HEADER */
         #header { 
             padding: 15px 20px; 
             display: flex; 
@@ -86,7 +87,7 @@
         #msg-input { width: 100%; background: transparent; border: none; color: #fff; padding: 25px; font-size: 1.1rem; outline: none; }
         #send-bar { display: flex; justify-content: flex-end; padding: 10px; }
         #send { background: var(--neon-border); border: none; padding: 10px 30px; cursor: pointer; font-weight: bold; }
-        #btnVaciar { background: transparent; color: var(--danger); border: 1px solid var(--danger); cursor: pointer; padding: 5px; font-size: 0.7rem; }
+        #btnVaciar { background: transparent; color: var(--danger); border: 1px solid var(--danger); cursor: pointer; padding: 5px 10px; font-size: 0.7rem; font-weight: bold; text-transform: uppercase; }
     </style>
 </head>
 <body>
@@ -104,7 +105,7 @@
 
     <div id="header">
         <h1 style="margin:0; font-size:1.2rem; color:var(--neon-border)">EL SOLAR // <span id="mi-nombre-display"></span></h1>
-        <button id="btnVaciar">LIMPIEZA TOTAL</button>
+        <button id="btnVaciar">LIMPIAR MI PANTALLA</button>
     </div>
 
     <div id="chat-container"></div>
@@ -118,7 +119,7 @@
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-        import { getFirestore, collection, addDoc, query, orderBy, onSnapshot, serverTimestamp, getDocs, deleteDoc, doc, limit } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+        import { getFirestore, collection, addDoc, query, orderBy, onSnapshot, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
         const firebaseConfig = {
             apiKey: "AIzaSyCfOBCYgEEfgKC53t-v2G6ll_XwD9nh6C8",
@@ -138,88 +139,24 @@
         let usuarioActual = sessionStorage.getItem("solar_name");
         let usuarioColor = sessionStorage.getItem("solar_color");
 
-        // FUNCIÓN PARA ENTRAR SIN RECARGAR
-        function iniciarInterfaz(nombre, color) {
+        function mostrarAvisoBienvenida(nombre) {
+            const aviso = document.getElementById('aviso-central');
+            aviso.innerHTML = `${nombre}<br><span style="font-size:1rem; color:#fff">! SALUDATE QUE WUELTA !</span>`;
+            aviso.style.display = 'block';
+            setTimeout(() => { aviso.style.display = 'none'; }, 3000);
+        }
+
+        function iniciarInterfaz(nombre, color, esNuevoLogin) {
             document.getElementById('login-overlay').style.display = 'none';
             document.getElementById('mi-nombre-display').innerText = nombre;
             document.getElementById('mi-nombre-display').style.color = color;
             usuarioActual = nombre;
             usuarioColor = color;
+            
+            if(esNuevoLogin) {
+                mostrarAvisoBienvenida(nombre);
+            }
         }
 
         if (usuarioActual) {
-            iniciarInterfaz(usuarioActual, usuarioColor);
-        }
-
-        document.getElementById('enter-btn').onclick = () => {
-            const val = document.getElementById('username').value.trim();
-            if (val) {
-                sessionStorage.setItem("solar_name", val);
-                sessionStorage.setItem("solar_color", myColor);
-                iniciarInterfaz(val, myColor);
-            }
-        };
-
-        // ENVIAR
-        const enviar = async () => {
-            const input = document.getElementById('msg-input');
-            if (input.value.trim() && usuarioActual) {
-                const texto = input.value;
-                input.value = "";
-                await addDoc(collection(db, "mensajes"), {
-                    autor: usuarioActual,
-                    texto: texto,
-                    color: usuarioColor,
-                    timestamp: serverTimestamp()
-                });
-            }
-        };
-
-        document.getElementById('send').onclick = enviar;
-        document.getElementById('msg-input').onkeypress = (e) => { if(e.key === 'Enter') enviar(); };
-
-        // AVISO "! QUE WUELTA !"
-        function mostrarAviso(nombre) {
-            const aviso = document.getElementById('aviso-central');
-            aviso.innerHTML = `${nombre}<br><span style="font-size:1rem; color:#fff">! QUE WUELTA ! SALUDATE EN EL SOLAR</span>`;
-            aviso.style.display = 'block';
-            setTimeout(() => { aviso.style.display = 'none'; }, 3000);
-        }
-
-        // LISTENER DE MENSAJES Y NOTIFICACIONES
-        let cargaInicial = true;
-        onSnapshot(query(collection(db, "mensajes"), orderBy("timestamp")), (snap) => {
-            const cont = document.getElementById('chat-container');
-            cont.innerHTML = "";
-            snap.forEach((doc) => {
-                const d = doc.data();
-                const esMio = d.autor === usuarioActual;
-                const div = document.createElement('div');
-                div.className = 'bubble';
-                div.style.borderColor = d.color;
-                div.style.alignSelf = esMio ? 'flex-end' : 'flex-start';
-                div.innerHTML = `<b style="color:${d.color}">${d.autor}</b><span style="color:#fff">${d.texto}</span>`;
-                cont.appendChild(div);
-            });
-            cont.scrollTop = cont.scrollHeight;
-
-            // Lógica de aviso para nuevos mensajes de otros
-            if (!cargaInicial && snap.docChanges().length > 0) {
-                const ultimo = snap.docChanges()[snap.docChanges().length - 1];
-                if (ultimo.type === "added" && ultimo.doc.data().autor !== usuarioActual) {
-                    mostrarAviso(ultimo.doc.data().autor);
-                }
-            }
-            cargaInicial = false;
-        });
-
-        // BORRADO
-        document.getElementById('btnVaciar').onclick = async () => {
-            if(confirm("¿BORRAR TODO?")){
-                const snap = await getDocs(collection(db, "mensajes"));
-                snap.forEach(async (d) => { await deleteDoc(doc(db, "mensajes", d.id)); });
-            }
-        };
-    </script>
-</body>
-</html>
+            iniciarInterfaz(usuarioActual, usuarioColor, false);
